--- a/src/Raven.Studio/wwwroot/App/views/database/settings/refresh.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/refresh.html
@@ -19,15 +19,16 @@
                             <div class="flex-start" >
                                 <div class="checkbox">
                                     <input id="specifyRefreshFrequency" class="styled" type="checkbox"
-                                           data-bind="checked: specifyRefreshFrequency, enable: enabled">
+                                           data-bind="checked: specifyRefreshFrequency, enable: enabled, requiredAccess: 'DatabaseAdmin', requiredAccessOptions: { strategy: 'disable' }">
                                     <label for="specifyRefreshFrequency">
-                                        Manually specify refresh frequency
+                                        Set refresh frequency
                                     </label>
                                 </div>
                             </div>
                             <div class="flex-grow" data-bind="validationElement: refreshFrequencyInSec">
                                 <div class="input-group">
-                                    <input class="form-control" type="number" min="0" placeholder="Default (60)" data-bind="numericInput: refreshFrequencyInSec, enable: specifyRefreshFrequency" />
+                                    <input class="form-control" type="number" min="0" placeholder="Default (60)"
+                                           data-bind="numericInput: refreshFrequencyInSec, enable: specifyRefreshFrequency, requiredAccess: 'DatabaseAdmin', requiredAccessOptions: { strategy: 'disable' }" />
                                     <div class="input-group-addon">
                                         seconds
                                     </div>
